<resources>
    <string name="app_name">Wan</string>

    <string name="title_home">首页</string>
    <string name="title_dashboard">知识体系</string>
    <string name="hot_title">Hot</string>
    <string name="mylike">我的收藏</string>
    <string name="about">关于作者</string>
    <string name="flutter">flutter</string>
    <string name="settingg">设置</string>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <color name="textColorSecondary">#7F7F7F</color>
    <string name="click_to_retry">加载失败，点击重试</string>
    <string name="loading">加载中</string>
    <string name="load_end">加载完成</string>
    <string name="no_data">这里空空的。</string>
    <string name="share_title">分享</string>
    <string name="like_title">收藏</string>
    <string name="browser_title">用系统浏览器打开</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="register_tips">没有账号？点此注册</string>
    <string name="account">账户</string>
    <string name="password">密码</string>
    <string name="password_again">确认密码</string>
    <string name="not_login">未登录</string>
    <string name="goto_login">点此登录</string>
    <string name="exit_app_tips">再按一次退出</string>
    <string name="accountOrPassword_empty">账户密码不能为空</string>
    <string name="login_suc">登陆成功</string>
    <string name="search_title">Search</string>
    <string name="login_please_login">请先登录</string>
    <string name="search_not_empty">搜索关键字不能为空</string>
    <string name="login_fail">登录失败，请检查账户名密码后重试</string>
    <string name="register">注册</string>
    <string name="register_suc">注册成功</string>
    <string name="bookmark_time">收藏时间</string>
</resources>
